<resources>
    <string name="app_name">ZooJumanji</string>
    <string name="action_webservice_ip">Change WS IP</string>

    <string name="home_title">Zoo Jumanji</string>
    <string name="animal_title">Animals</string>
    <string name="enclosure_title">Enclosures</string>
    <string name="stock_title">Stock</string>
    <string name="ticket_title">Tickets</string>

    <string name="animal_type_carnivorous">carnivorous</string>
    <string name="animal_type_herbivorous">herbivorous</string>
    <string name="animal_type_insectivorous">insectivorous</string>
    <string name="animal_type_omnivorous">omnivorous</string>
    <string name="animal_type_fructivorous">fructivorous</string>
    <string name="animal_type_granivorous">granivorous</string>

    <string name="animal_species_lion">lion</string>
    <string name="animal_species_suricat">suricat</string>
    <string name="animal_species_warthog">warthog</string>
    <string name="animal_species_monkey">monkey</string>
    <string name="animal_species_tiger">tiger</string>
    <string name="animal_species_bird">bird</string>

    <string name="animal_sex_male">male</string>
    <string name="animal_sex_female">female</string>
    <string name="animal_sex_hermaphrodite">hermaphrodite</string>
    <string name="animal_sex_assexual">assexual</string>

    <string name="detail_label_name">Name : </string>
    <string name="detail_label_age">Age : </string>
    <string name="detail_label_sex">Sex : </string>
    <string name="detail_label_species">Species : </string>
    <string name="detail_label_type">Type : </string>
    <string name="detail_label_count">Count : </string>
    <string name="detail_label_in_stock">In stock : </string>
    <string name="detail_label_capacity">Capacity : </string>
    <string name="detail_label_price">Price : </string>
    <string name="detail_label_quantity">Quantity : </string>
    <string name="detail_label_date">Date : </string>
    <string name="detail_label_max">Max : </string>
    <string name="detail_label_unity">Unity : </string>

    <string name="enclosure_type_cage">cage</string>
    <string name="enclosure_type_paddock">paddock</string>
    <string name="enclosure_type_pool">pool</string>
    <string name="enclosure_type_aquarium">aquarium</string>
    <string name="enclosure_type_vivarium">vivarium</string>

    <string name="stock_type_meat">meat</string>
    <string name="stock_type_apple">apple</string>
    <string name="stock_type_banana">banana</string>
    <string name="stock_type_seed">seed</string>
    <string name="stock_type_mouse">mouse</string>
    <string name="stock_type_hay">hay</string>
    <string name="stock_type_bug">bug</string>
    <string name="stock_type_popcorn">popcorn</string>

    <string name="stock_unity_piece">piece</string>
    <string name="stock_unity_kilo">kilo</string>
    <string name="stock_unity_gramme">gramme</string>
    <string name="stock_unity_tonne">tonne</string>

    <string name="ticket_privilege_feed_timon">feed Timon</string>
    <string name="ticket_privilege_care_entrance">care entrance</string>
    <string name="ticket_privilege_enclosure_entrance">enclosure entrance</string>
    <string name="ticket_privilege_nursery_entrance">nursery entrance</string>

    <string name="ticket_type_normal">normal ticket</string>
    <string name="ticket_type_vip">ticket VIP</string>
    <string name="ticket_type_student">student ticket</string>
    <string name="ticket_type_child">child ticket</string>
    <string name="ticket_type_group">group ticket</string>
    <string name="Error_Not_Found_Exception">Error_Not_Found_Exception</string>

    <string name="empty_list">Empty list</string>

    <string name="message_undo_deletion">Undo deletion</string>
    <string name="message_stock_deletion">Stock deleted</string>
    <string name="message_ticket_deletion">Ticket deleted</string>
    <string name="message_deletion_undo">UNDO</string>
    <string name="message_updating">Updating</string>
    <string name="message_update_success">Update success</string>
    <string name="message_update_failure">Update error</string>

    <string name="exception_unknown_animal">Unknown animal</string>
    <string name="exception_unknown_enclosure">Unknown enclosure</string>
    <string name="exception_unknown_stock">Unknown stock</string>
    <string name="exception_unknown_ticket">Unknown ticket</string>
    <string name="exception_formular_error">Formular Error</string>

    <string name="prompt_button_ok">OK</string>
    <string name="prompt_button_cancel">Cancel</string>
    <string name="prompt_message">Type your IP :</string>

</resources>
