<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".stock.activity.StockDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_label"
                android:layout_height="wrap_content"
                android:text="@string/detail_label_name"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/edit_stock_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <!-- Type -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_label"
                android:layout_height="wrap_content"
                android:text="@string/detail_label_type"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/detail_stock_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <!-- Actual Count  -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_label"
                android:layout_height="wrap_content"
                android:text="@string/detail_label_in_stock"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/detail_stock_actual_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <!-- max count -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/detail_label"
                android:layout_height="wrap_content"
                android:text="@string/detail_label_capacity"
                android:textSize="@dimen/text_size" />

            <EditText
                android:id="@+id/detail_stock_max_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size" />

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_save" />

</android.support.design.widget.CoordinatorLayout>
